--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,4 +8,16 @@
     <input type="text" name="password">
     <input type="submit" value="Submit">
   </form>
+  <form action="/create" method="POST">
+    Sign Up
+    <br>
+    <label for="name"> Name</label>
+    <input type="text" name="name"><br>
+    <label for="email"> Email</label>
+    <input type="text" name="email"> <br>
+    <label for="password"> Password</label>
+    <input type="text" name="password"><br>
+    <input type="submit" value="Submit">
+  </form>
+
 </div>
